--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,23 @@
+# Node modules
 node_modules/
+
+# Ambiente
 .env
+
+# Logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Sistema
+.DS_Store
+Thumbs.db
+
+# Jest coverage reports
+coverage/
+
+# Teste snapshots
+__snapshots__/
+
+# Arquivos temporários
+*.log
