--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^16.5.0",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
+    "luxon": "^3.6.1",
     "mysql2": "^3.14.1"
   },
   "devDependencies": {
